# google-api-python-client-stubs

./: .gitignore  README.md  create_stubs.py  discovery.pyi  pyproject.toml
.github/workflows/: create_updated_stubs_pr.yml  main.yml  publish.yml
.github/workflows/matchers/: black.json  isort.json  mypy.json  ruff.json
apiclient-stubs/: __init__.pyi  channel.pyi  discovery.pyi  errors.pyi  http.pyi  mimeparse.pyi  model.pyi  sample_tools.pyi  schema.pyi  version.pyi
googleapiclient-stubs/: __init__.pyi  _auth.pyi  _helpers.pyi  channel.pyi  discovery.pyi  errors.pyi  http.pyi  mimeparse.pyi  model.pyi  sample_tools.pyi  schema.pyi
googleapiclient-stubs/_apis/abusiveexperiencereport/v1/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/acceleratedmobilepageurl/v1/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/accessapproval/v1/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/accesscontextmanager/v1/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/accesscontextmanager/v1beta/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/acmedns/v1/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/addressvalidation/v1/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/adexchangebuyer/v1_2/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/adexchangebuyer/v1_3/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/adexchangebuyer/v1_4/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/adexchangebuyer2/v2beta1/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/adexperiencereport/v1/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/admin/datatransfer_v1/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/admin/directory_v1/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/admin/reports_v1/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/admob/v1/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/admob/v1beta/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/adsense/v1_4/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/adsense/v2/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/adsensehost/v4_1/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/adsenseplatform/v1/: schemas.pyi
googleapiclient-stubs/_apis/adsenseplatform/v1alpha/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/advisorynotifications/v1/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/agentregistry/v1alpha/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/aiplatform/v1/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/aiplatform/v1beta1/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/airquality/v1/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/alertcenter/v1beta1/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/alloydb/v1/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/alloydb/v1alpha/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/alloydb/v1beta/: resources.pyi  schemas.pyi
googleapiclient-stubs/_apis/analytics/v3/: resources.pyi  schemas.pyi
googleapiclient-stubs/discovery_cache/: __init__.pyi  appengine_memcache.pyi  base.pyi  file_cache.pyi
(+1082 files in other folders)
