[tool.poetry]
name = "google-api-python-client-stubs"
version = "1.26.0"
description = "Type stubs for google-api-python-client"
authors = ["Henrik Bruådal <henrik.bruasdal@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/henribru/google-api-python-client-stubs"
packages = [
    { include = "googleapiclient-stubs" },
    { include = "apiclient-stubs" },
]
classifiers = [
   "Typing :: Stubs Only",
]

[tool.poetry.dependencies]
python = "^3.7"
google-api-python-client = ">=2.141.0"
typing-extensions = ">=3.10.0"
types-httplib2 = ">=0.22.0.2"

[tool.poetry.group.dev.dependencies]
mypy = {version = "^1.9.0", python = "^3.8"}
stubdefaulter = "^0.1.0"
ruff = "^0.3.3"

[tool.ruff.lint]
select = ["UP", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = [
    "apiclient",
    "googleapiclient",
]

[tool.mypy]
warn_unused_ignores = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
